loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:11: error: not found: value deposeBiscuit
deposeBiscuit() 
^