loopfor.LoopFor.scala.code
var nbPas : Int = 0
while (!estSurBiscuit()) {
nbPas = nbPas + 1 
  avance()
}
prendBiscuit()

for (compteur <- 0 to nbPas) {
  recule()
}
deposeBiscuit()